--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,46 @@
+html {
+  font-family: sans-serif;
+}
+
 a {
+  font-size: 18px;
   text-decoration: none;
+  color: #000;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 h1 {
   text-align: center;
 }
 
+h3 {
+  font-size: 20px;
+  margin: 0px;
+}
+
+p {
+  font-size: 18px;
+  padding: 20px 0px 0px 0px;
+  margin: 0px;
+}
+
 .container {
   max-width: 1000px;
   margin: 0 auto;
   padding: 0 15px;
+}
+
+.section-wiki {
+  margin: 20px 0px;
+}
+
+.quote {
+  font-size: 18px;
+  font-style: italic;
+  text-align: center;
+  padding: 20px 150px 0px 150px;
+  width: 700px;
 }
