--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ p {
   font-style: italic;
   text-align: center;
   padding: 20px 150px 0px 150px;
-  width: 700px;
+  max-width: 700px;
 }
 
 .back-to-the-top__button {
