--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ p {
 
 .contents {
   border: 1px solid #000;
+  border-radius: 10px;
   max-width: 400px;
 }
 
@@ -58,6 +59,7 @@ p {
   color: #000;
   display: block;
   border: 1px solid #000;
+  border-radius: 5px;
   padding: 5px;
   margin: 10px 431px;
   max-width: 125px;
