--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 html {
   font-family: sans-serif;
+  color: #000;
+  background-color: #fff;
 }
 
 a {
@@ -8,14 +16,22 @@ a {
   color: #000;
 }
 
-a:hover {
+button:hover {
+  cursor: pointer;
+}
+
+ul a:hover {
   text-decoration: underline;
 }
 
 h1 {
   text-align: center;
   border-bottom: 1px solid #252525;
-  padding-bottom: 5px;
+  padding: 10px 0px;
+}
+
+ul {
+  list-style: none;
 }
 
 h3 {
@@ -36,10 +52,14 @@ p {
 }
 
 .contents-and-portrait {
+  margin-top: 20px;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .contents {
+  padding: 20px 10px 15px 30px;
   border: 1px solid #000;
   border-radius: 10px;
   width: 400px;
@@ -47,7 +67,7 @@ p {
 }
 
 .h2__title {
-  margin: 20px 0px 10px 15px;
+  margin-bottom: 15px;
 }
 
 .portrait {
@@ -55,8 +75,6 @@ p {
   border: 1px solid #000;
   border-radius: 10px;
   padding: 0px 25px 15px 25px;
-  margin-left: 200px;
-  box-sizing: border-box;
   text-align: center;
 }
 
@@ -77,20 +95,19 @@ p {
   max-width: 700px;
 }
 
-.back-to-the-top__button {
+.back-to-the-top__btn {
   color: #000;
-  display: block;
   border: 1px solid #000;
   border-radius: 5px;
   padding: 5px;
-  margin: 10px 425px;
+  margin: 20px auto;
   max-width: 150px;
-  box-sizing: border-box;
+  display: block;
   text-align: center;
   transition: .7s;
 }
 
-.back-to-the-top__button:hover {
+.back-to-the-top__btn:hover {
   background-color: #000;
   color: #fff;
   text-decoration: none;
