--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,6 @@ h1 {
   padding: 10px 0px;
 }
 
-ul {
-  list-style: none;
-}
-
 h3 {
   font-size: 20px;
   margin: 0px;
@@ -63,7 +59,14 @@ p {
   border: 1px solid #000;
   border-radius: 10px;
   width: 400px;
-  max-height: 250px;
+}
+
+.sublist {
+  margin: 0px 0px 10px 15px;
+}
+
+.subsublist {
+  margin-left: 15px;
 }
 
 .h2__title {
@@ -74,7 +77,7 @@ p {
   max-width: 400px;
   border: 1px solid #000;
   border-radius: 10px;
-  padding: 0px 25px 15px 25px;
+  padding: 15px 25px;
   text-align: center;
 }
 
@@ -88,10 +91,11 @@ p {
 }
 
 .quote {
+  border-left: 2px solid #7e7e7e00;
   font-size: 18px;
   font-style: italic;
   text-align: center;
-  padding: 20px 150px 0px 150px;
+  margin: 0 auto;
   max-width: 700px;
 }
 
