--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,6 @@ ul a:hover {
   text-decoration: underline;
 }
 
-h1 {
-  text-align: center;
-  border-bottom: 1px solid #a2a9b1;
-  padding: 10px 0px;
-}
-
 h3 {
   font-size: 20px;
   margin: 0px;
@@ -39,6 +33,12 @@ p {
   font-size: 18px;
   padding: 20px 0px 0px 0px;
   margin: 0px;
+}
+
+#top {
+  text-align: center;
+  border-bottom: 1px solid #a2a9b1;
+  padding: 10px 0px;
 }
 
 .container {
@@ -84,6 +84,14 @@ p {
 .portrait__img {
   max-width: 350px;
   margin-bottom: 10px;
+}
+
+.section-title {
+  font-weight: 400;
+  font-family: 'Linux Libertine','Georgia','Times',serif;
+  margin: 20px 0px 5px 0px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #a2a9b1;
 }
 
 .section-wiki {
