--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -10,43 +10,56 @@ html {
   background-color: #fff;
 }
 
+p {
+  font-size: 100%;
+}
+
 .container {
-  max-width: 1000px;
+  max-width: 1300px;
   margin: 0 auto;
   padding: 0 15px;
 }
 
 .row {
   width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .title {
   text-align: center;
   padding: 30px 0;
+  font-size: 175%;
 }
 
+.section {
+  padding: 15px;
+  margin: 0 15px;
+  border: 1px solid #000;
+}
 
-
-
-
+.section__title {
+  font-size: 125%;
+}
 
 /* desktop */
 @media (min-width: 992px){
-  .col-lg-4 {
+  .section {
     max-width: 33.3333%;
   }
 }
 
 /* tablet */
 @media (min-width: 768px) and (max-width: 991px) {
-  .col-md-6 {
+  .section {
     max-width: 50%;
   }
 }
 
 /* mobile */
 @media (max-width: 767px) {
-  .col-sm-12 {
+  .section {
     max-width: 100%;
   }
 }
