--- a/module3-project/css/style.css
+++ b/module3-project/css/style.css
@@ -15,6 +15,22 @@ a:hover, a:focus {
   text-decoration: none;
 }
 
+.d-flex {
+  display: flex;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.justify-space-between {
+  justify-content: space-between;
+}
+
+.align-center {
+  align-items: center;
+}
+
 .header-nav {
   background-color: #f6b319;
   border-radius: 0;
@@ -53,11 +69,6 @@ a:hover, a:focus {
   vertical-align: middle;
 }
 
-
-
-.d-flex {
-  display: flex;
-}
 
 /* mobile */
 @media (max-width: 767px) {
