--- a/module3-project/css/style.css
+++ b/module3-project/css/style.css
@@ -72,10 +72,15 @@ a:hover, a:focus {
 .main-header-nav a {
   color: #951c49;
   text-align: center;
+  padding: 5px;
 }
 
 .main-header-nav a:hover {
   background-color: #e7e7e7;
+}
+
+.main-header-nav a + a {
+  margin-left: 20px;
 }
 
 .main-header-nav a span {
@@ -91,10 +96,117 @@ a:hover, a:focus {
   text-align: right;
 }
 
+.burger {
+  display: none;
+}
 
-/* mobile */
-@media (max-width: 767px) {
+/* Large devices */
+@media (min-width: 1200px) {
+
+}
+
+/* Medium devices */
+@media (max-width: 1199px) {
+  .logo-img {
+    background: url(../img/restaurant-logo_medium.png) no-repeat;
+    width: 100px;
+    height: 100px;
+    margin: 5px 5px 5px 0;
+  }
+}
+
+/* Small devices */
+@media (max-width: 991px) {
   .invisible-sm {
     display: none;
+  }
+}
+
+/* Extra Small devices */
+@media (max-width: 767px) {
+  .body.lock {
+    overflow: hidden;
+  }
+
+  .burger {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-color: transparent;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    position: relative;
+    padding: 10px;
+    margin-right: 20px;
+    z-index: 3;
+    border: 1px solid #61122f;
+    border-radius: 10px;
+  }
+
+  .burger:focus {
+    outline: none;
+  }
+
+  .burger-line {
+    height: 3px;
+    width: 100%;
+    background-color: #61122f;
+    border-radius: 3px;
+    position: relative;
+    transition: .3s;
+  }
+
+  .burger-line:first-child {
+    top: 3px;
+    transform: translateY(-10px);
+  }
+
+  .burger-line:last-child {
+    bottom: 3px;
+    transform: translateY(10px);
+  }
+
+  .burger.open .burger-line:first-child {
+    transform: rotate(45deg);
+  }
+
+  .burger.open .burger-line:nth-child(2) {
+    opacity: 0;
+  }
+
+  .burger.open .burger-line:last-child {
+    transform: rotate(-45deg);
+  }
+
+  .header-content {
+    z-index: 40;
+  }
+
+  .main-header-nav {
+    position: fixed;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: all .5s ease 0s;
+    overflow: auto;
+    display: block;
+    background-color: rgb(37, 37, 58);
+    padding: 90px 0 0 40px;
+    z-index: 1;
+  }
+
+  .main-header-nav.open {
+    top: 0;
+  }
+
+  .main-header-nav a {
+    padding: 10px 10px;
+    display: block;
+  }
+
+  .main-header-nav a + a {
+    margin: 0;
   }
 }
